--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -29,6 +29,7 @@ body
 
     @media (max-width: 768px)
         background c_white
+        padding 0px
 
 
 
@@ -77,6 +78,15 @@ h2
     line-height 30px
 
 
+h3
+    margin-top 0px
+    margin-bottom 0px
+    color #151616
+    font-weight fw_bold
+    font-size 22px
+    line-height 24px
+
+
 
 p
     margin-top 0px
@@ -107,48 +117,9 @@ p
     box-shadow 0px 0px 20px rgba(21, 22, 22, 0.6)
 
     @media (max-width: 768px)
-        margin-top 0px
-        margin-bottom 0px
-
-
-
-#application
-    label
-        margin-top 20px
-        margin-bottom 5px
-        font-weight fw_normal
-
-    select
-        border-color c_gray_dark
-        outline none
         box-shadow none
 
-        &:focus
-            outline none
-            border-color c_orange
-            outline 0px
 
-    input
-    textarea
-        padding 5px 1px
-        border-radius 0px
-        border none
-        border-bottom solid 1px c_gray_dark
-        outline none
-        box-shadow none
-        font-size 18px
 
-        &:focus
-            color c_orange
-            border-color c_orange
-            outline 0px
-
-        &[type=file]
-            border none
-            color c_white
-
-        &[readonly]
-            background-color c_white
-
-    button
-        margin-top 100px
+.work
+    margin-top 30px
