--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -94,19 +94,15 @@ p
 
 
 
+
+ul.nav-pills li.active a
+    background #F49F24 !important
+
+
+
+
 .spacer
     height 50px
-
-
-
-.btn-danger
-    color red
-    outline 0px
-
-    &:hover
-    &:active
-        color red
-        outline 0px
 
 
 
