--- a/source/views/voting.jade
+++ b/source/views/voting.jade
@@ -17,7 +17,7 @@ script(type='text/ng-template', id='voting')
 
   .row.work(ng-repeat-end, ng-repeat='work in works | filter:{category:category, agegroup:selected_agegroup}')
     .col-xs-12
-      button.btn.btn-default.btn-lg.col-xs-2.col-sm-1 +1
+      button.btn.btn-default.btn-lg.col-xs-2.col-sm-1(ng-click='doVote(work.id)', ng-class='votes.indexOf(work.id) > -1 ? "voted" : ""') +1
 
       .col-xs-10.col-sm-11
         h3
