Font Awesome; Thumbs Up icon for voting btn;

--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -94,8 +94,16 @@ p
 
 
 
+span
+    color c_gray_dark
+
+
+
 i
     color c_gray_dark
+    font-size 30px !important
+
+
 
 button
     outline none !important
@@ -113,6 +121,10 @@ button.voted
     font-weight fw_bold
     border 0px
     outline none !important
+
+    i
+        color c_white
+
 
 
 
