--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -117,15 +117,13 @@ ul.nav-pills li.active a
 
 button.voted
     background c_orange !important
+    border-color c_orange !important
     color c_white !important
     font-weight fw_bold
-    border 0px
     outline none !important
 
     i
         color c_white
-
-
 
 
 
