Vote button changes

--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -101,7 +101,8 @@ span
 
 i
     color c_gray_dark
-    font-size 30px !important
+    font-size 25px !important
+    line-height 25px !important
 
 
 
@@ -117,7 +118,7 @@ ul.nav-pills li.active a
 
 button.voted
     background c_orange !important
-    border-color c_orange !important
+    border none !important
     color c_white !important
     font-weight fw_bold
     outline none !important
