--- a/source/views/voting.jade
+++ b/source/views/voting.jade
@@ -23,7 +23,8 @@ script(type='text/ng-template', id='voting')
 
   .row.work(ng-repeat-end, ng-repeat='work in works | filter:{category:category, agegroup:selected_agegroup}')
     .col-xs-12
-      button.btn.btn-default.btn-lg.col-xs-2.col-sm-1(ng-click='doVote(work.id)', ng-class='votes.indexOf(work.id) > -1 ? "voted" : ""')
+      button.btn.btn-default.btn-lg.col-xs-2.col-sm-1(ng-click='doVote(work.id)', ng-show='votes.indexOf(work.id) === -1') +1
+      button.btn.btn-default.voted.btn-lg.col-xs-2.col-sm-1(ng-click='doVote(work.id)', ng-show='votes.indexOf(work.id) > -1')
         i.fa.fa-thumbs-o-up
 
       .col-xs-10.col-sm-11
