--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -21,7 +21,8 @@ html(ng-app='pdApp')
     #wrapper
       #content.container
         .row
-          img.col-xs-10.col-sm-6.col-md-4.col-xs-offset-1.col-sm-offset-3.col-md-offset-4(src='images/ProgeTiiger_Logo_horisontaal_EST_web.jpg')
+          a(href='http://www.progetiiger.ee')
+            img.col-xs-10.col-sm-6.col-md-4.col-xs-offset-1.col-sm-offset-3.col-md-offset-4(src='images/ProgeTiiger_Logo_horisontaal_EST_web.jpg')
 
         div(ng-view, autoscroll='true')
 
