--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -4,7 +4,7 @@ html(ng-app='pdApp')
 
     title ProgeTiiger
 
-    base(href='')
+    base(href='/')
 
     meta(charset='utf-8')
     meta(name='viewport', content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui')
